Finished for presenation, adding new feature for pitch type selection

--- a/pitch_testing.ipynb
+++ b/pitch_testing.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-14T17:00:10.121489Z",
-     "start_time": "2025-11-14T17:00:09.742872Z"
+     "end_time": "2025-11-18T18:01:17.714925Z",
+     "start_time": "2025-11-18T18:01:17.359353Z"
     }
    },
    "cell_type": "code",
@@ -26,17 +26,17 @@
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-14T17:00:12.851246Z",
-     "start_time": "2025-11-14T17:00:11.857718Z"
+     "end_time": "2025-11-18T18:01:29.127159Z",
+     "start_time": "2025-11-18T18:01:27.574955Z"
     }
    },
    "cell_type": "code",
-   "source": "baseball_data = pd.read_csv('baseball_data.csv')",
+   "source": "baseball_data = pd.read_csv('data_complete.csv')",
    "id": "2d10373f6c3da14",
    "outputs": [],
    "execution_count": 4
@@ -44,8 +44,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-14T17:01:11.234168Z",
-     "start_time": "2025-11-14T17:01:11.134455Z"
+     "end_time": "2025-11-18T18:01:29.924955Z",
+     "start_time": "2025-11-18T18:01:29.757039Z"
     }
    },
    "cell_type": "code",
@@ -451,12 +451,12 @@
        "</div>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 11
+   "execution_count": 5
   },
   {
    "metadata": {
@@ -699,8 +699,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-13T18:14:17.237368Z",
-     "start_time": "2025-11-13T18:14:17.224850Z"
+     "end_time": "2025-11-18T18:01:48.204809Z",
+     "start_time": "2025-11-18T18:01:48.186586Z"
     }
    },
    "cell_type": "code",
@@ -740,6 +740,34 @@
     }
    ],
    "execution_count": 7
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T18:03:19.945926Z",
+     "start_time": "2025-11-18T18:03:19.930005Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "hi =pitcher_filter['pitch_name'].unique()\n",
+    "hi"
+   ],
+   "id": "e2f1681bc61fe161",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Slider', '4-Seam Fastball', 'Cutter', 'Knuckle Curve', 'Changeup'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 14
   }
  ],
  "metadata": {
