--- a/pitch_testing.ipynb
+++ b/pitch_testing.ipynb
@@ -768,6 +768,48 @@
     }
    ],
    "execution_count": 14
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T18:51:17.598943Z",
+     "start_time": "2025-11-18T18:51:16.833431Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from dash import Dash, html, dcc, Input, Output, ctx\n",
+    "import plotly.express as px\n",
+    "import pandas as pd"
+   ],
+   "id": "2e06f431451f933e",
+   "outputs": [],
+   "execution_count": 15
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T18:51:35.198649Z",
+     "start_time": "2025-11-18T18:51:35.149014Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "id": "76777350e09474e5",
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "type object 'Dash' has no attribute '__version__'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[18], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[43mDash\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m__version__\u001B[49m)\n",
+      "\u001B[0;31mAttributeError\u001B[0m: type object 'Dash' has no attribute '__version__'"
+     ]
+    }
+   ],
+   "execution_count": 18
   }
  ],
  "metadata": {
