Parquet file added

--- a/pitch_testing.ipynb
+++ b/pitch_testing.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-19T17:13:11.984517Z",
-     "start_time": "2025-11-19T17:13:11.584843Z"
+     "end_time": "2025-11-19T22:42:21.121604Z",
+     "start_time": "2025-11-19T22:42:20.798157Z"
     }
    },
    "cell_type": "code",
@@ -29,23 +29,31 @@
    "execution_count": 1
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-19T17:13:13.044912Z",
-     "start_time": "2025-11-19T17:13:11.996478Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
-   "source": "baseball_data = pd.read_csv('data_complete.csv')",
-   "id": "2d10373f6c3da14",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": null,
+   "source": "",
+   "id": "ef6a55d2c27c9c3a"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-19T17:13:13.276661Z",
-     "start_time": "2025-11-19T17:13:13.177361Z"
+     "end_time": "2025-11-19T22:44:25.015004Z",
+     "start_time": "2025-11-19T22:44:24.417438Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "baseball_data = pd.read_parquet('data_complete.parquet')",
+   "id": "2d10373f6c3da14",
+   "outputs": [],
+   "execution_count": 5
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-19T22:44:27.361421Z",
+     "start_time": "2025-11-19T22:44:27.271959Z"
     }
    },
    "cell_type": "code",
@@ -65,24 +73,24 @@
        "109485         SL  2022-10-21           83.5          -1.37           6.51   \n",
        "109486         CH  2022-10-21           86.0          -1.75           6.37   \n",
        "...           ...         ...            ...            ...            ...   \n",
-       "181372        NaN  2018-03-08            NaN            NaN            NaN   \n",
-       "181373        NaN  2018-03-08            NaN            NaN            NaN   \n",
-       "181374        NaN  2018-03-08            NaN            NaN            NaN   \n",
-       "181375        NaN  2018-03-08            NaN            NaN            NaN   \n",
-       "181376        NaN  2018-03-08            NaN            NaN            NaN   \n",
+       "181372       None  2018-03-08            NaN            NaN            NaN   \n",
+       "181373       None  2018-03-08            NaN            NaN            NaN   \n",
+       "181374       None  2018-03-08            NaN            NaN            NaN   \n",
+       "181375       None  2018-03-08            NaN            NaN            NaN   \n",
+       "181376       None  2018-03-08            NaN            NaN            NaN   \n",
        "\n",
        "           player_name  batter  pitcher     events      description  ...  \\\n",
        "109482   Musgrove, Joe  664761   605397     double    hit_into_play  ...   \n",
        "109483   Musgrove, Joe  592206   605397     double    hit_into_play  ...   \n",
-       "109484   Musgrove, Joe  592206   605397        NaN  swinging_strike  ...   \n",
-       "109485   Musgrove, Joe  592206   605397        NaN    called_strike  ...   \n",
+       "109484   Musgrove, Joe  592206   605397       None  swinging_strike  ...   \n",
+       "109485   Musgrove, Joe  592206   605397       None    called_strike  ...   \n",
        "109486   Musgrove, Joe  547180   605397  field_out    hit_into_play  ...   \n",
        "...                ...     ...      ...        ...              ...  ...   \n",
-       "181372  Severino, Luis  664068   622663        NaN             ball  ...   \n",
-       "181373  Severino, Luis  664068   622663        NaN             ball  ...   \n",
-       "181374  Severino, Luis  664068   622663        NaN    called_strike  ...   \n",
+       "181372  Severino, Luis  664068   622663       None             ball  ...   \n",
+       "181373  Severino, Luis  664068   622663       None             ball  ...   \n",
+       "181374  Severino, Luis  664068   622663       None    called_strike  ...   \n",
        "181375  Severino, Luis  596451   622663  field_out    hit_into_play  ...   \n",
-       "181376  Severino, Luis  596451   622663        NaN    called_strike  ...   \n",
+       "181376  Severino, Luis  596451   622663       None    called_strike  ...   \n",
        "\n",
        "        pitcher_days_since_prev_game  batter_days_since_prev_game  \\\n",
        "109482                           6.0                          2.0   \n",
@@ -239,7 +247,7 @@
        "      <td>Musgrove, Joe</td>\n",
        "      <td>592206</td>\n",
        "      <td>605397</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
        "      <td>swinging_strike</td>\n",
        "      <td>...</td>\n",
        "      <td>6.0</td>\n",
@@ -263,7 +271,7 @@
        "      <td>Musgrove, Joe</td>\n",
        "      <td>592206</td>\n",
        "      <td>605397</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
        "      <td>called_strike</td>\n",
        "      <td>...</td>\n",
        "      <td>6.0</td>\n",
@@ -327,7 +335,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>181372</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
        "      <td>2018-03-08</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -335,7 +343,7 @@
        "      <td>Severino, Luis</td>\n",
        "      <td>664068</td>\n",
        "      <td>622663</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
        "      <td>ball</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
@@ -351,7 +359,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>181373</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
        "      <td>2018-03-08</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -359,7 +367,7 @@
        "      <td>Severino, Luis</td>\n",
        "      <td>664068</td>\n",
        "      <td>622663</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
        "      <td>ball</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
@@ -375,7 +383,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>181374</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
        "      <td>2018-03-08</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -383,7 +391,7 @@
        "      <td>Severino, Luis</td>\n",
        "      <td>664068</td>\n",
        "      <td>622663</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
        "      <td>called_strike</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
@@ -399,7 +407,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>181375</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
        "      <td>2018-03-08</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -423,7 +431,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>181376</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
        "      <td>2018-03-08</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -431,7 +439,7 @@
        "      <td>Severino, Luis</td>\n",
        "      <td>596451</td>\n",
        "      <td>622663</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
        "      <td>called_strike</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
@@ -451,12 +459,12 @@
        "</div>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "execution_count": 6
   },
   {
    "metadata": {
@@ -789,27 +797,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-18T18:51:35.198649Z",
-     "start_time": "2025-11-18T18:51:35.149014Z"
+     "end_time": "2025-11-19T22:43:09.087063Z",
+     "start_time": "2025-11-19T22:43:08.376204Z"
     }
    },
    "cell_type": "code",
-   "source": "",
+   "source": "baseball_data.to_parquet('data_complete.parquet')",
    "id": "76777350e09474e5",
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "type object 'Dash' has no attribute '__version__'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[18], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[43mDash\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m__version__\u001B[49m)\n",
-      "\u001B[0;31mAttributeError\u001B[0m: type object 'Dash' has no attribute '__version__'"
-     ]
-    }
-   ],
-   "execution_count": 18
+   "outputs": [],
+   "execution_count": 4
   }
  ],
  "metadata": {
