--- a/pitch_testing.ipynb
+++ b/pitch_testing.ipynb
@@ -806,6 +806,48 @@
    "id": "76777350e09474e5",
    "outputs": [],
    "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-19T23:35:54.878291Z",
+     "start_time": "2025-11-19T23:35:54.071814Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "baseball_data = pd.read_parquet('data_complete.parquet')\n",
+    "player_list = baseball_data['player_name'].unique()\n",
+    "surgery_list = baseball_data['surgery'].unique()"
+   ],
+   "id": "ac107a6ccb162d5a",
+   "outputs": [],
+   "execution_count": 7
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-19T23:36:00.237477Z",
+     "start_time": "2025-11-19T23:36:00.227591Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "player_list",
+   "id": "f6c9cfed3565bf3",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Cole, Gerrit', 'Bibee, Tanner', 'Lively, Ben', ...,\n",
+       "       'Hardy, Blaine', 'Beede, Tyler', 'Severino, Luis'], dtype=object)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 8
   }
  ],
  "metadata": {
