Bayesian File Included

--- a/pitch_testing.ipynb
+++ b/pitch_testing.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-19T22:42:21.121604Z",
-     "start_time": "2025-11-19T22:42:20.798157Z"
+     "end_time": "2025-11-20T23:49:02.672945Z",
+     "start_time": "2025-11-20T23:49:02.343462Z"
     }
    },
    "cell_type": "code",
@@ -39,21 +39,425 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-19T22:44:25.015004Z",
-     "start_time": "2025-11-19T22:44:24.417438Z"
+     "end_time": "2025-11-20T23:49:07.759606Z",
+     "start_time": "2025-11-20T23:49:07.522156Z"
     }
    },
    "cell_type": "code",
-   "source": "baseball_data = pd.read_parquet('data_complete.parquet')",
+   "source": [
+    "baseball_data = pd.read_parquet('data_complete.parquet')\n",
+    "baseball_data"
+   ],
    "id": "2d10373f6c3da14",
-   "outputs": [],
-   "execution_count": 5
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "       pitch_type   game_date  release_speed  release_pos_x  release_pos_z  \\\n",
+       "0              SL  2024-10-15           89.7          -2.31           5.91   \n",
+       "1              SI  2024-10-15           95.6          -2.02           6.13   \n",
+       "2              FF  2024-10-15           97.7          -2.19           6.02   \n",
+       "3              SI  2024-10-15           98.1          -2.47           5.76   \n",
+       "4              FF  2024-10-15           97.4          -2.08           6.11   \n",
+       "...           ...         ...            ...            ...            ...   \n",
+       "181372       None  2018-03-08            NaN            NaN            NaN   \n",
+       "181373       None  2018-03-08            NaN            NaN            NaN   \n",
+       "181374       None  2018-03-08            NaN            NaN            NaN   \n",
+       "181375       None  2018-03-08            NaN            NaN            NaN   \n",
+       "181376       None  2018-03-08            NaN            NaN            NaN   \n",
+       "\n",
+       "           player_name  batter  pitcher     events    description  ...  \\\n",
+       "0         Cole, Gerrit  657041   543037       walk           ball  ...   \n",
+       "1         Cole, Gerrit  657041   543037       None           foul  ...   \n",
+       "2         Cole, Gerrit  657041   543037       None           ball  ...   \n",
+       "3         Cole, Gerrit  657041   543037       None           foul  ...   \n",
+       "4         Cole, Gerrit  657041   543037       None           ball  ...   \n",
+       "...                ...     ...      ...        ...            ...  ...   \n",
+       "181372  Severino, Luis  664068   622663       None           ball  ...   \n",
+       "181373  Severino, Luis  664068   622663       None           ball  ...   \n",
+       "181374  Severino, Luis  664068   622663       None  called_strike  ...   \n",
+       "181375  Severino, Luis  596451   622663  field_out  hit_into_play  ...   \n",
+       "181376  Severino, Luis  596451   622663       None  called_strike  ...   \n",
+       "\n",
+       "        pitcher_days_since_prev_game  batter_days_since_prev_game  \\\n",
+       "0                                5.0                          1.0   \n",
+       "1                                5.0                          1.0   \n",
+       "2                                5.0                          1.0   \n",
+       "3                                5.0                          1.0   \n",
+       "4                                5.0                          1.0   \n",
+       "...                              ...                          ...   \n",
+       "181372                           NaN                          NaN   \n",
+       "181373                           NaN                          NaN   \n",
+       "181374                           NaN                          NaN   \n",
+       "181375                           NaN                          NaN   \n",
+       "181376                           NaN                          NaN   \n",
+       "\n",
+       "        pitcher_days_until_next_game  batter_days_until_next_game  \\\n",
+       "0                               10.0                          2.0   \n",
+       "1                               10.0                          2.0   \n",
+       "2                               10.0                          2.0   \n",
+       "3                               10.0                          2.0   \n",
+       "4                               10.0                          2.0   \n",
+       "...                              ...                          ...   \n",
+       "181372                           NaN                          NaN   \n",
+       "181373                           NaN                          NaN   \n",
+       "181374                           NaN                          NaN   \n",
+       "181375                           NaN                          NaN   \n",
+       "181376                           NaN                          NaN   \n",
+       "\n",
+       "        api_break_z_with_gravity api_break_x_arm api_break_x_batter_in  \\\n",
+       "0                           2.55           -0.44                 -0.44   \n",
+       "1                           1.17            1.40                  1.40   \n",
+       "2                           0.95            0.62                  0.62   \n",
+       "3                           1.24            1.45                  1.45   \n",
+       "4                           0.82            0.43                  0.43   \n",
+       "...                          ...             ...                   ...   \n",
+       "181372                       NaN             NaN                   NaN   \n",
+       "181373                       NaN             NaN                   NaN   \n",
+       "181374                       NaN             NaN                   NaN   \n",
+       "181375                       NaN             NaN                   NaN   \n",
+       "181376                       NaN             NaN                   NaN   \n",
+       "\n",
+       "       arm_angle surgery        X  \n",
+       "0           40.5       0      NaN  \n",
+       "1           46.6       0      NaN  \n",
+       "2           40.4       0      NaN  \n",
+       "3           35.6       0      NaN  \n",
+       "4           44.3       0      NaN  \n",
+       "...          ...     ...      ...  \n",
+       "181372       NaN       1  71891.0  \n",
+       "181373       NaN       1  71892.0  \n",
+       "181374       NaN       1  71893.0  \n",
+       "181375       NaN       1  71894.0  \n",
+       "181376       NaN       1  71895.0  \n",
+       "\n",
+       "[181377 rows x 115 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pitch_type</th>\n",
+       "      <th>game_date</th>\n",
+       "      <th>release_speed</th>\n",
+       "      <th>release_pos_x</th>\n",
+       "      <th>release_pos_z</th>\n",
+       "      <th>player_name</th>\n",
+       "      <th>batter</th>\n",
+       "      <th>pitcher</th>\n",
+       "      <th>events</th>\n",
+       "      <th>description</th>\n",
+       "      <th>...</th>\n",
+       "      <th>pitcher_days_since_prev_game</th>\n",
+       "      <th>batter_days_since_prev_game</th>\n",
+       "      <th>pitcher_days_until_next_game</th>\n",
+       "      <th>batter_days_until_next_game</th>\n",
+       "      <th>api_break_z_with_gravity</th>\n",
+       "      <th>api_break_x_arm</th>\n",
+       "      <th>api_break_x_batter_in</th>\n",
+       "      <th>arm_angle</th>\n",
+       "      <th>surgery</th>\n",
+       "      <th>X</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>SL</td>\n",
+       "      <td>2024-10-15</td>\n",
+       "      <td>89.7</td>\n",
+       "      <td>-2.31</td>\n",
+       "      <td>5.91</td>\n",
+       "      <td>Cole, Gerrit</td>\n",
+       "      <td>657041</td>\n",
+       "      <td>543037</td>\n",
+       "      <td>walk</td>\n",
+       "      <td>ball</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.55</td>\n",
+       "      <td>-0.44</td>\n",
+       "      <td>-0.44</td>\n",
+       "      <td>40.5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>SI</td>\n",
+       "      <td>2024-10-15</td>\n",
+       "      <td>95.6</td>\n",
+       "      <td>-2.02</td>\n",
+       "      <td>6.13</td>\n",
+       "      <td>Cole, Gerrit</td>\n",
+       "      <td>657041</td>\n",
+       "      <td>543037</td>\n",
+       "      <td>None</td>\n",
+       "      <td>foul</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.17</td>\n",
+       "      <td>1.40</td>\n",
+       "      <td>1.40</td>\n",
+       "      <td>46.6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>FF</td>\n",
+       "      <td>2024-10-15</td>\n",
+       "      <td>97.7</td>\n",
+       "      <td>-2.19</td>\n",
+       "      <td>6.02</td>\n",
+       "      <td>Cole, Gerrit</td>\n",
+       "      <td>657041</td>\n",
+       "      <td>543037</td>\n",
+       "      <td>None</td>\n",
+       "      <td>ball</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.95</td>\n",
+       "      <td>0.62</td>\n",
+       "      <td>0.62</td>\n",
+       "      <td>40.4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>SI</td>\n",
+       "      <td>2024-10-15</td>\n",
+       "      <td>98.1</td>\n",
+       "      <td>-2.47</td>\n",
+       "      <td>5.76</td>\n",
+       "      <td>Cole, Gerrit</td>\n",
+       "      <td>657041</td>\n",
+       "      <td>543037</td>\n",
+       "      <td>None</td>\n",
+       "      <td>foul</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.24</td>\n",
+       "      <td>1.45</td>\n",
+       "      <td>1.45</td>\n",
+       "      <td>35.6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>FF</td>\n",
+       "      <td>2024-10-15</td>\n",
+       "      <td>97.4</td>\n",
+       "      <td>-2.08</td>\n",
+       "      <td>6.11</td>\n",
+       "      <td>Cole, Gerrit</td>\n",
+       "      <td>657041</td>\n",
+       "      <td>543037</td>\n",
+       "      <td>None</td>\n",
+       "      <td>ball</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.82</td>\n",
+       "      <td>0.43</td>\n",
+       "      <td>0.43</td>\n",
+       "      <td>44.3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>181372</th>\n",
+       "      <td>None</td>\n",
+       "      <td>2018-03-08</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Severino, Luis</td>\n",
+       "      <td>664068</td>\n",
+       "      <td>622663</td>\n",
+       "      <td>None</td>\n",
+       "      <td>ball</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>71891.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>181373</th>\n",
+       "      <td>None</td>\n",
+       "      <td>2018-03-08</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Severino, Luis</td>\n",
+       "      <td>664068</td>\n",
+       "      <td>622663</td>\n",
+       "      <td>None</td>\n",
+       "      <td>ball</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>71892.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>181374</th>\n",
+       "      <td>None</td>\n",
+       "      <td>2018-03-08</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Severino, Luis</td>\n",
+       "      <td>664068</td>\n",
+       "      <td>622663</td>\n",
+       "      <td>None</td>\n",
+       "      <td>called_strike</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>71893.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>181375</th>\n",
+       "      <td>None</td>\n",
+       "      <td>2018-03-08</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Severino, Luis</td>\n",
+       "      <td>596451</td>\n",
+       "      <td>622663</td>\n",
+       "      <td>field_out</td>\n",
+       "      <td>hit_into_play</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>71894.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>181376</th>\n",
+       "      <td>None</td>\n",
+       "      <td>2018-03-08</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Severino, Luis</td>\n",
+       "      <td>596451</td>\n",
+       "      <td>622663</td>\n",
+       "      <td>None</td>\n",
+       "      <td>called_strike</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>71895.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>181377 rows × 115 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-19T22:44:27.361421Z",
-     "start_time": "2025-11-19T22:44:27.271959Z"
+     "end_time": "2025-11-20T23:49:03.478602Z",
+     "start_time": "2025-11-20T23:49:03.387994Z"
     }
    },
    "cell_type": "code",
@@ -459,12 +863,12 @@
        "</div>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 6
+   "execution_count": 3
   },
   {
    "metadata": {
